--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <version>7.7.1</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version>
+        </dependency>
+
 
     </dependencies>
 
