--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,12 @@
             <artifactId>json</artifactId>
             <version>20230227</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
 
     </dependencies>
 
